[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Rowdies.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=2]
[ext_resource path="res://Fonts/Rowdies-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="DynamicFont" id=2]
size = 96
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Username" type="Control" parent="Background"]
margin_right = 40.0
margin_bottom = 40.0

[node name="UserNameEdit" type="LineEdit" parent="Background/Username"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 961.0
margin_top = 423.0
margin_right = 1403.0
margin_bottom = 513.0
custom_fonts/font = ExtResource( 1 )

[node name="Username" type="Label" parent="Background/Username"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 491.0
margin_top = 420.0
margin_right = 915.0
margin_bottom = 500.0
custom_fonts/font = ExtResource( 1 )
text = "Username:"
align = 2
valign = 1

[node name="JoinButton" type="Button" parent="Background/Username"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 690.0
margin_top = 540.0
margin_right = 1190.0
margin_bottom = 640.0
custom_fonts/font = ExtResource( 1 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerSelector" type="Control" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 125, 244 )

[node name="Title" type="Label" parent="Background/ServerSelector"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -363.0
margin_top = 20.0
margin_right = 363.0
margin_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Server Selector"
align = 1
valign = 1

[node name="ServerName" type="Label" parent="Background/ServerSelector"]
margin_left = 100.0
margin_top = 150.0
margin_right = 285.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 1 )
text = "Server Name:"

[node name="PlayerCount" type="Label" parent="Background/ServerSelector"]
margin_left = 1000.0
margin_top = 150.0
margin_right = 1421.0
margin_bottom = 230.0
custom_fonts/font = ExtResource( 1 )
text = "Player Count:"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/ServerSelector"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 244.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Background/ServerSelector/ScrollContainer"]
custom_constants/separation = 100

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Background/Username/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_refresh_server_list"]
